# johnDeSilencio.github.io

./: .dprint.json  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  Trunk.toml  flake.nix  index.html  rust-toolchain.toml  tailwind.config.js
.github/workflows/: code-coverage.yaml  conventional-commits.yaml  e2e-tests.yaml  enforce-formatting.yaml  formatting.yaml  github-pages.yaml  markdown-link-checker.yaml  markdown-links.yaml
e2e/: hello-world.feature
e2e/features/: commands.feature  initial-load.feature
e2e/tests/: e2e.rs
e2e/tests/fixtures/: action.rs  check.rs  find.rs
e2e/tests/fixtures/world/: action_steps.rs  check_steps.rs  mod.rs  precondition_steps.rs
public/: manifest.json
src/: biography.rs  bulldog.rs  command.rs  main.rs  map.rs
src/logos/: email.rs  github.rs  linkedin.rs  mod.rs
style/: main.css
