[package]
authors = ["Nicholas R. Smith <nicholasrsmith1600@gmail.com>"]
categories = ["wasm", "command-line-utilities"]
edition = "2021"
homepage = "https://johndesilenc.io"
keywords = ["terminal", "emulator", "johndesilencio"]
license = "MIT"
license-file = "LICENSE"
name = "smith-oxide"
readme = "README.md"
repository = "https://github.com/johnDeSilencio/johnDeSilencio.github.io"
rust-version = "1.56.1"
version = "0.1.0"

[dependencies]
