[package]
authors = ["Nicholas R. Smith <nicholasrsmith1600@gmail.com>"]
categories = ["wasm", "command-line-utilities"]
edition = "2021"
homepage = "https://johndesilenc.io"
keywords = ["terminal", "emulator", "johndesilencio"]
license = "MIT"
name = "smith-oxide"
readme = "README.md"
repository = "https://github.com/johnDeSilencio/johnDeSilencio.github.io"
rust-version = "1.56.1"
version = "0.1.0"

[dependencies]
leptos = { version = "0.6.9", features = ["csr", "nightly"] }
leptos_meta = { version = "0.6.9", features = ["nightly", "csr"] }

[dev-dependencies]
anyhow = "1.0.81"
cucumber = "0.20.2"
fantoccini = "0.19.3"
pretty_assertions = "1.4.0"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread", "time"] }

[[test]]
name = "e2e"
harness = false # Allow Cucumber to print output instead of libtest
path = "e2e/tests/e2e.rs"
