[package]
name = "john-de-silencio"
version = "0.1.0"
authors = ["Nicholas R. Smith <nicholasrsmith1600@gmail.com>"]
categories = ["wasm", "command-line-utilities"]
description = "Personal website of Nicholas R. Smith (@johnDeSilencio)"
edition = "2021"
homepage = "https://johndesilenc.io"
keywords = ["terminal", "emulator", "johndesilencio"]
license = "MIT"
readme = "MIT OR Apache-2.0"
repository = "https://github.com/johnDeSilencio/johnDeSilencio.github.io"
rust-version = "1.56.1"

[dependencies]
console_error_panic_hook = "0.1.7"
leptos = { version = "0.6.9", features = ["csr", "nightly"] }
leptos_meta = { version = "0.6.9", features = ["nightly", "csr"] }

[dev-dependencies]
anyhow = "1.0.82"
cucumber = "0.20.2"
fantoccini = "0.19.3"
pretty_assertions = "1.4.0"
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread", "time"] }

[profile.dev]
opt-level = 0
debug = 0
codegen-units = 256

[profile.test]
opt-level = 0
debug = 0
codegen-units = 256

[profile.release]
lto = true
opt-level = 's'

[[test]]
name = "e2e"
harness = false # Allow Cucumber to print output instead of libtest
path = "e2e/tests/e2e.rs"
